[package]
name = "meal_randomizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = {version = "4.2.2", features=["default", "derive"]}
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
log = "0.4.17"